fix: remove redundant overflow rule, fixed in ui
This reverts commit a36ab37ae0d5aed0495d0fc365fe4da5236594d4.

--- a/src/pages/edit/ItemSelector/styles/ItemSelector.module.css
+++ b/src/pages/edit/ItemSelector/styles/ItemSelector.module.css
@@ -1,5 +1,4 @@
 .menu {
-    overflow: auto;
     height: 50vh;
     width: 700px;
 }
